--- a/开发环境搭建.md
+++ b/开发环境搭建.md
@@ -146,6 +146,38 @@ public class AddFileHeadComment : UnityEditor.AssetModificationProcessor
 ```
 编译后再创建的文件便有了文件头部注释
 
+获取文件名、函数名
+
+```
+void Init()
+    {
+        //非静态函数版本
+        string CallStack = "CallStack:[" + new System.Diagnostics.StackTrace().GetFrame(1).GetMethod() + "] => ";
+        string SceneName = " Scene:[" + SceneManager.GetActiveScene().name + "]";
+        string GameObjectName = " GameObject:[" + gameObject.name + "]";
+        string ClassName = " Class:[" + this.GetType().Name + "]";
+        string FunctionName = " Function:[" + System.Reflection.MethodBase.GetCurrentMethod().Name + "]";
+        string Log = " Log:[" + "runing" + "]";
+        string OutputResult = CallStack + SceneName + GameObjectName + ClassName + FunctionName + Log;
+        Debug.Log(OutputResult);
+    }
+ 
+    public static void Show(GameObject go)
+    {
+        //静态函数版本
+        string callStack = "CallStack:[" + new System.Diagnostics.StackTrace().GetFrame(1).GetMethod() + "] => ";
+        string FileName = " FileName:[" + System.IO.Path.GetFileName(new System.Diagnostics.StackTrace(1, true).GetFrame(0).GetFileName()) + "]";
+        string LineNumber = " Line:[" + new System.Diagnostics.StackTrace(1, true).GetFrame(0).GetFileLineNumber().ToString() + "]";
+        string sceneName = " Scene:[" + SceneManager.GetActiveScene().name + "]";
+        string gameObjectName = " GameObject:[" + go.name + "]";
+        string className = " Class:[" + System.Reflection.MethodBase.GetCurrentMethod().ReflectedType.FullName + "]";
+        string functionName = " Function:[" + System.Reflection.MethodBase.GetCurrentMethod().Name + "]";
+        string log = " Log:[" + "GetComponentNullLog" + "]";
+        string OutputResult = callStack + FileName + LineNumber + sceneName + gameObjectName + className + functionName + log;
+        Debug.Log(OutputResult);
+    }
+```
+
 ##### 学习网站
 
 https://www.w3cschool.cn/unity3d/unity3d-fva92c8y.html
